# UNI_BAZA

./: BaseOrg.cpp  BaseOrg.h  CMakeLists.txt  Chamber.h  FacultiesDataBase.cpp  FacultiesDataBase.h  Faculty.cpp  Faculty.h  LICENSE  RegularFaculty.cpp  RegularFaculty.h  SectoralFaculty.cpp  SectoralFaculty.h  main.cpp
